[package]
edition = "2021"
name = "ton_block_json"
version = "0.7.3"

[dependencies]
anyhow = "1.0.55"
base64 = "0.13.0"
hex = "0.4.3"
num = "0.4"
num-traits = "0.2"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }

ton_block = { git = "https://github.com/broxus/ton-labs-block" }
ton_types = { git = "https://github.com/broxus/ton-labs-types" }
